# spectro-photometric-pca

./: README.md  pyproject.toml  requirements.txt
notebooks/: Example - PCA photometry fit.ipynb  Prepare galaxy spectrophotometric data (eBOSS).ipynb
spectrophotometricpca/: datapipeline.py  dataprep.py  main_pca.py  main_pca_specphot.py  pca.py  utils.py
tests/: test_datapipeline.py  test_pca.py
