
# poetry export -f requirements.txt --output requirements.txt
# poetry run pytest --cov -p no:warnings

[tool.poetry]
name = "spectrophotometricpca"
version = "0.1.0"
description = ""
authors = ["Boris Leistedt <b.leistedt@imperial.ac.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ixkael/spectro-photometric-pca"
repository = "https://github.com/ixkael/spectro-photometric-pca"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
gasp = { git = "https://github.com/ixkael/gasp.git", branch="main" }
jaxlib = {url = "https://storage.googleapis.com/jax-releases/cuda101/jaxlib-0.1.57%2Bcuda101-cp38-none-manylinux2010_x86_64.whl"}
python = "^3.8"
click = "^7.1.2"
chex = "^0.0.3"
jupyter = "^1.0.0"
ipykernel = "^5.4.2"
jax = "^0.2.7"
dustmaps = "^1.0.6"
extinction = "^0.4.5"


[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = {extras = ["toml"], version = "^5.3.1"}
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.paths]
source = ["spectrophotometricpca", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["spectrophotometricpca"]

[tool.coverage.report]
show_missing = true
